--- a/builderRaiders5x3.html
+++ b/builderRaiders5x3.html
@@ -310,7 +310,7 @@
 
         <div id="paragraphs">
 
-          <h2>'Drag and Drop' the units from the box in the centre to the boxes on the left. (You can scroll down in the box to see more units) <br> To remove a unit from a box in the layout on the left, 'Drag and Drop' the unit into the bin in the centre. <br> Once you are happy with your layout, please screenshot it and send it in #outcasts-layouts in the Frontier Chronicles Discord server.</h2>
+          <h2>'Drag and Drop' the units from the box in the centre to the boxes on the left. (You can scroll down in the box to see more units) <br> To remove a unit from a box in the layout on the left, 'Drag and Drop' the unit into the bin in the centre. <br> Once you are happy with your layout, please screenshot it and send it in #raiders-layouts in the Frontier Chronicles Discord server.</h2>
 
         </div>
 
