--- a/builderRaiders3x3.html
+++ b/builderRaiders3x3.html
@@ -4,10 +4,19 @@
 
         <style>
 
-            @font-face {
-              font-family: Exo2;
-              src: url("font/Exo2-SemiBold.ttf");
-            }
+          @font-face {
+            font-family: Exo2;
+            src: url("font/Exo2-SemiBold.ttf");
+          }
+
+          @font-face {
+            font-family: Exo2Bold;
+            src: url("font/Exo2-ExtraBold.ttf");
+          }
+
+          b {
+            font-family: Exo2Bold;
+          }
 
             #t1, #t2, #t3 {
               width: 100;
@@ -309,7 +318,7 @@
 
         <div id="paragraphs">
 
-          <h2>'Drag and Drop' the units from the box in the centre to the boxes on the left. (You can scroll down in the box to see more units) <br> To remove a unit from a box in the layout on the left, 'Drag and Drop' the unit into the bin in the centre. <br> Once you are happy with your layout, please screenshot it and send it in #raiders-layouts in the Frontier Chronicles Discord server.</h2>
+          <h2>'Drag and Drop' the units from the box in the centre to the boxes on the left. (You can scroll down in the box to see more units) <br><br> To remove a unit from a box in the layout on the left, 'Drag and Drop' the unit into the bin in the centre. <br><br> Once you are happy with your layout, please screenshot it and send it in #raiders-layouts in the Frontier Chronicles Discord server. <b> When taking your screenshot, please try to make the layout as big as possible on screen, especially on mobile, so it is easier to see your layout when you send it on Discord. </b></h2>
 
         </div>
 
@@ -321,7 +330,7 @@
 
         <div id="paragraphs">
 
-          <h2>You can 'Drag and Drop' a unit from the centre list directly into the bin, causing it to be removed from the centre list. <br> It isn't necessarily 'mobile optimised', however you should still be able to create layouts on mobile. <br> 'Drag and Drop' doesn't work on some browsers (mostly outdated browsers). <br> It has been tested and works correctly on: <br> - Google Chrome for Windows <br> - Microsoft Edge for Windows <br> - Firefox for Mac <br> - Safari for iPadOS <br> - Safari for iOS <br> - Chrome for iOS <br> - Edge for iOS <br> - Firefox for iOS <br> - Samsung Internet for Android <br> It has been tested and doesn't work on: <br> - Internet Explorer </h2>
+          <h2>You can 'Drag and Drop' a unit from the centre list directly into the bin, causing it to be removed from the centre list. <br><br> It isn't necessarily 'mobile optimised', however you should still be able to create layouts on mobile. <br><br> 'Drag and Drop' doesn't work on some browsers (mostly outdated browsers). <br> <b> It has been tested and works correctly on: </b> <br> - Google Chrome for Windows <br> - Microsoft Edge for Windows <br> - Firefox for Mac <br> - Safari for iPadOS <br> - Safari for iOS <br> - Chrome for iOS <br> - Edge for iOS <br> - Firefox for iOS <br> - Samsung Internet for Android <br> <b> It has been tested and doesn't work on: </b> <br> - Internet Explorer </h2>
 
         </div>
 
