--- a/builderRaiders.html
+++ b/builderRaiders.html
@@ -20,13 +20,16 @@
       }
 
       #three, #five {
-        margin: 1em;
         padding: 1em;
         border: 5px solid black;
       }
 
       html {
         padding-bottom: 3em;
+      }
+
+      .unitsHeader {
+        padding-left: 25;
       }
 
     </style>
@@ -36,13 +39,15 @@
 
   <body>
 
-    <h1>Frontier Chronicles Enemy Layout Builder - Raiders</h1>
+    <h1 class="unitsHeader">Frontier Chronicles Enemy Layout Builder - Raiders</h1>
 
-    <h2>Choose a Layout:</h2>
+    <h2 class="unitsHeader">Choose a Layout:</h2>
 
-    <a href="builderRaiders3x3.html"> <img id="three" src="otherIMG/three.png" height="250"></a>
+    <br><br>
 
-    <a href="builderRaiders5x3.html"> <img id="five" src="otherIMG/five.png" height="250"></a>
+    <a class="unitsHeader" href="builderRaiders3x3.html"> <img id="three" src="otherIMG/three.png" height="250"></a>
+
+    <a class="unitsHeader" href="builderRaiders5x3.html"> <img id="five" src="otherIMG/five.png" height="250"></a>
 
   </body>
 
