--- a/index.html
+++ b/index.html
@@ -28,6 +28,15 @@
         padding-bottom: 3em;
       }
 
+      .unitsHeader {
+        padding-left: 25;
+      }
+
+      .units {
+        padding-left: 25;
+        padding-bottom: 10;
+      }
+
     </style>
 
   </head>
@@ -35,58 +44,58 @@
 
   <body>
 
-    <h1>Frontier Chronicles Enemy Layout Builder</h1>
+    <h1 class="unitsHeader">Frontier Chronicles Enemy Layout Builder</h1>
 
-    <a href="builderRats.html">Click here to build a Rats Layout</a>
-
-    <br>
-
-    <a href="builderRaiders.html">Click here to build a Raiders Layout</a>
+    <a class="unitsHeader" href="builderRats.html">Click here to build a Rats Layout</a>
 
     <br>
 
-    <a href="builderOutcasts.html">Click here to build an Outcasts Layout</a>
+    <a class="unitsHeader" href="builderRaiders.html">Click here to build a Raiders Layout</a>
 
-    <h2>Rats:</h2>
+    <br>
 
-    <img id="bossMotherRat" src="rats/rat_boss_motherrat_front.png" height="100">
-    <img id="pretender" src="rats/rat_pretender_front.png" height="100">
-    <img id="screamer" src="rats/rat_screamer_front.png" height="100">
-    <img id="soldier" src="rats/rat_soldier_front.png" height="100">
+    <a class="unitsHeader" href="builderOutcasts.html">Click here to build an Outcasts Layout</a>
 
-    <h2>Raiders:</h2>
+    <h2 class="unitsHeader">Rats:</h2>
 
-    <img id="bossBoomerang" src="raiders/raider_boss_boomerang_front.png" height="100">
-    <img id="bossDeadEye" src="raiders/raider_boss_deadeye_front.png" height="100">
-    <img id="bossPoacher" src="raiders/raider_boss_poacher_front.png" height="100">
-    <img id="cannonRider" src="raiders/raider_cannonrider_front.png" height="100">
-    <img id="knifeThrower" src="raiders/raider_knifethrower_front.png" height="100">
-    <img id="musketeer" src="raiders/raider_musketeer_front.png" height="100">
-    <img id="oneEyeSniper" src="raiders/raider_oneeye_sniper_front.png" height="100">
-    <img id="rampart" src="raiders/raider_rampart_front.png" height="100">
-    <img id="rhinoRider" src="raiders/raider_rhinorider_front.png" height="100">
-    <img id="skullCrusher" src="raiders/raider_skullcrusher_front.png" height="100">
+    <img class="units" id="bossMotherRat" src="rats/rat_boss_motherrat_front.png" height="100">
+    <img class="units" id="pretender" src="rats/rat_pretender_front.png" height="100">
+    <img class="units" id="screamer" src="rats/rat_screamer_front.png" height="100">
+    <img class="units" id="soldier" src="rats/rat_soldier_front.png" height="100">
 
-    <h2>Outcasts:</h2>
+    <h2 class="unitsHeader">Raiders:</h2>
 
-    <img id="corpsGun" src="player/Artillery/artillery_corps_gun_front.png" height="100">
-    <img id="howitzer" src="player/Artillery/artillery_howitzer_front.png" height="100">
-    <img id="regimentalHowitzer" src="player/Artillery/artillery_regimental_howitzer_front.png" height="100">
-    <img id="bazooka" src="player/Soldiers/bazooka_front.png" height="100">
-    <img id="gunner" src="player/Soldiers/gunner_front.png" height="100">
-    <img id="shieldtrooper" src="player/Soldiers/shieldtrooper_front.png" height="100">
-    <img id="sniper" src="player/Soldiers/sniper_front.png" height="100">
-    <img id="trooper" src="player/Soldiers/trooper_front.png" height="100">
-    <img id="tankLight" src="player/Vehicles/tank_light_front.png" height="100">
-    <img id="tankMiddle" src="player/Vehicles/tank_middle_front.png" height="100">
-    <img id="oustin" src="player/Vehicles/teh_oustin_front.png" height="100">
+    <img class="units" id="bossBoomerang" src="raiders/raider_boss_boomerang_front.png" height="100">
+    <img class="units" id="bossDeadEye" src="raiders/raider_boss_deadeye_front.png" height="100">
+    <img class="units" id="bossPoacher" src="raiders/raider_boss_poacher_front.png" height="100">
+    <img class="units" id="cannonRider" src="raiders/raider_cannonrider_front.png" height="100">
+    <img class="units" id="knifeThrower" src="raiders/raider_knifethrower_front.png" height="100">
+    <img class="units" id="musketeer" src="raiders/raider_musketeer_front.png" height="100">
+    <img class="units" id="oneEyeSniper" src="raiders/raider_oneeye_sniper_front.png" height="100">
+    <img class="units" id="rampart" src="raiders/raider_rampart_front.png" height="100">
+    <img class="units" id="rhinoRider" src="raiders/raider_rhinorider_front.png" height="100">
+    <img class="units" id="skullCrusher" src="raiders/raider_skullcrusher_front.png" height="100">
 
-    <h2>Objects Available on ALL Layouts:</h2>
+    <h2 class="unitsHeader">Outcasts:</h2>
 
-    <img id="explosive" src="player/Objects/explosive_000.png" height="100">
-    <img id="hostage" src="player/Objects/hostage_000.png" height="100">
-    <img id="stones" src="player/Objects/stones_00.png" height="100">
-    <img id="treelog" src="player/Objects/treelog_00.png" height="100">
+    <img class="units" id="corpsGun" src="player/Artillery/artillery_corps_gun_front.png" height="100">
+    <img class="units" id="howitzer" src="player/Artillery/artillery_howitzer_front.png" height="100">
+    <img class="units" id="regimentalHowitzer" src="player/Artillery/artillery_regimental_howitzer_front.png" height="100">
+    <img class="units" id="bazooka" src="player/Soldiers/bazooka_front.png" height="100">
+    <img class="units" id="gunner" src="player/Soldiers/gunner_front.png" height="100">
+    <img class="units" id="shieldtrooper" src="player/Soldiers/shieldtrooper_front.png" height="100">
+    <img class="units" id="sniper" src="player/Soldiers/sniper_front.png" height="100">
+    <img class="units" id="trooper" src="player/Soldiers/trooper_front.png" height="100">
+    <img class="units" id="tankLight" src="player/Vehicles/tank_light_front.png" height="100">
+    <img class="units" id="tankMiddle" src="player/Vehicles/tank_middle_front.png" height="100">
+    <img class="units" id="oustin" src="player/Vehicles/teh_oustin_front.png" height="100">
+
+    <h2 class="unitsHeader">Objects Available on ALL Layouts:</h2>
+
+    <img class="units" id="explosive" src="player/Objects/explosive_000.png" height="100">
+    <img class="units" id="hostage" src="player/Objects/hostage_000.png" height="100">
+    <img class="units" id="stones" src="player/Objects/stones_00.png" height="100">
+    <img class="units" id="treelog" src="player/Objects/treelog_00.png" height="100">
 
   </body>
 
