--- a/builderRaiders5x3.html
+++ b/builderRaiders5x3.html
@@ -142,7 +142,7 @@
           if(ev.target.children.length === 0) {
             var data = ev.dataTransfer.getData("div");
 
-            if (data == "drag2") {
+            if (data == "drag2" || data == "drag9") {
               var placedTile = ev.target.id
 
               if (placedTile.startsWith("b")) {
